AC_PREREQ(2.59)
AC_REVISION($Id$)
#
#  configure.in
#
#  This file is part of the OpenLink Ajax Toolkit (OAT) project
#
#  Copyright (C) 2005-2007 OpenLink Software
#
#  This project is free software; you can redistribute it and/or modify it
#  under the terms of the GNU General Public License as published by the
#  Free Software Foundation; only version 2 of the License, dated June 1991
#
#  This project is distributed in the hope that it will be useful, but
#  WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software Foundation,
#  Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
#

##########################################################################
##									##
##  Initialization							##
##									##
##########################################################################
AC_INIT([OpenLink Ajax Toolkit],
        [2.9-rc4],
	[oat.admin@openlinksw.com],
	[oat])
AC_CONFIG_SRCDIR([oat/loader.js])
AC_CONFIG_AUX_DIR(admin)
AM_INIT_AUTOMAKE([])
AM_MAINTAINER_MODE


########################################################################## 
##									##
##  Generate Makefiles etc.						##
##									##
##########################################################################
AC_CONFIG_FILES([
    Makefile 
    demo/Makefile
    dbdesigner/Makefile
    exhibit-sparql/Makefile
    formdesigner/Makefile
    fresnel/Makefile
    images/Makefile
    interopfest/Makefile
    iphone_data_page/Makefile
    isparql/Makefile
    linked_data_page/Makefile
    notify/Makefile
    oat/docs/Makefile
    oat/Makefile
    qbe/Makefile
    rdfbrowser/Makefile
    rdfbrowser2/Makefile
    styles/Makefile
    xslt/Makefile
])
AC_OUTPUT
